BridgeTools/Latte/grammar/Bridgelatte/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Bridgelatte/Par.y
-----------------------------------------------------------------------------


rule 10 is unused

terminal 'int' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	Prog -> ListDef                                    (3)
	Prog -> ListDef Expr                               (4)
	Def -> ShapeDef                                    (5)
	Def -> EvalDef                                     (6)
	ListDef ->                                         (7)
	ListDef -> Def                                     (8)
	ListDef -> Def ';' ListDef                         (9)
	Type -> 'int'                                      (10)
	ShapeDef -> Ident '=' ListShape                    (11)
	EvalDef -> Ident '=' 'Evaluator' '(' ListEvalVal ')'   (12)
	EvalVal -> Integer                                 (13)
	ListEvalVal ->                                     (14)
	ListEvalVal -> EvalVal                             (15)
	ListEvalVal -> EvalVal ',' ListEvalVal             (16)
	Shape -> ShapeOk                                   (17)
	Shape -> ShapeNeg                                  (18)
	ShapeOk -> '[' ListSuitCount ']'                   (19)
	ShapeNeg -> '!' ShapeOk                            (20)
	ListShape ->                                       (21)
	ListShape -> Shape                                 (22)
	ListShape -> Shape '+' ListShape                   (23)
	SuitCount -> SuitInt                               (24)
	SuitCount -> '(' ListSuitInt ')'                   (25)
	SuitInt -> Integer                                 (26)
	ListSuitCount ->                                   (27)
	ListSuitCount -> SuitCount                         (28)
	ListSuitCount -> SuitCount ';' ListSuitCount       (29)
	ListSuitInt ->                                     (30)
	ListSuitInt -> SuitInt                             (31)
	ListSuitInt -> SuitInt ';' ListSuitInt             (32)
	Expr6 -> Hand '.' Ident                            (33)
	Expr6 -> Integer                                   (34)
	Expr6 -> 'true'                                    (35)
	Expr6 -> 'false'                                   (36)
	Expr6 -> '(' Expr ')'                              (37)
	Expr5 -> 'not' Expr6                               (38)
	Expr5 -> Expr6                                     (39)
	Expr2 -> Expr2 RelOp Expr3                         (40)
	Expr2 -> Expr3                                     (41)
	Expr1 -> Expr2 'and' Expr1                         (42)
	Expr1 -> Expr2                                     (43)
	Expr -> Expr1 'or' Expr                            (44)
	Expr -> Expr1                                      (45)
	Expr3 -> Expr4                                     (46)
	Expr4 -> Expr5                                     (47)
	Hand -> 'N'                                        (48)
	Hand -> 'E'                                        (49)
	Hand -> 'W'                                        (50)
	Hand -> 'S'                                        (51)
	RelOp -> '<'                                       (52)
	RelOp -> '<='                                      (53)
	RelOp -> '>'                                       (54)
	RelOp -> '>='                                      (55)
	RelOp -> '=='                                      (56)
	RelOp -> '!='                                      (57)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'.'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'<'            { PT _ (TS _ 9) }
	'<='           { PT _ (TS _ 10) }
	'='            { PT _ (TS _ 11) }
	'=='           { PT _ (TS _ 12) }
	'>'            { PT _ (TS _ 13) }
	'>='           { PT _ (TS _ 14) }
	'E'            { PT _ (TS _ 15) }
	'Evaluator'    { PT _ (TS _ 16) }
	'N'            { PT _ (TS _ 17) }
	'S'            { PT _ (TS _ 18) }
	'W'            { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'and'          { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'not'          { PT _ (TS _ 25) }
	'or'           { PT _ (TS _ 26) }
	'true'         { PT _ (TS _ 27) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	Ident           rule  1
	Integer         rule  2
	Prog            rules 3, 4
	Def             rules 5, 6
	ListDef         rules 7, 8, 9
	Type            rule  10
	ShapeDef        rule  11
	EvalDef         rule  12
	EvalVal         rule  13
	ListEvalVal     rules 14, 15, 16
	Shape           rules 17, 18
	ShapeOk         rule  19
	ShapeNeg        rule  20
	ListShape       rules 21, 22, 23
	SuitCount       rules 24, 25
	SuitInt         rule  26
	ListSuitCount   rules 27, 28, 29
	ListSuitInt     rules 30, 31, 32
	Expr6           rules 33, 34, 35, 36, 37
	Expr5           rules 38, 39
	Expr2           rules 40, 41
	Expr1           rules 42, 43
	Expr            rules 44, 45
	Expr3           rule  46
	Expr4           rule  47
	Hand            rules 48, 49, 50, 51
	RelOp           rules 52, 53, 54, 55, 56, 57

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 7
	'E'            reduce using rule 7
	'N'            reduce using rule 7
	'S'            reduce using rule 7
	'W'            reduce using rule 7
	'false'        reduce using rule 7
	'not'          reduce using rule 7
	'true'         reduce using rule 7
	L_Ident        shift, and enter state 2
	L_integ        reduce using rule 7
	%eof           reduce using rule 7

	Ident          goto state 3
	Prog           goto state 4
	Def            goto state 5
	ListDef        goto state 6
	ShapeDef       goto state 7
	EvalDef        goto state 8

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	')'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'and'          reduce using rule 1
	'or'           reduce using rule 1
	%eof           reduce using rule 1


State 3

	ShapeDef -> Ident . '=' ListShape                   (rule 11)
	EvalDef -> Ident . '=' 'Evaluator' '(' ListEvalVal ')'    (rule 12)

	'='            shift, and enter state 28


State 4

	%start_pProg -> Prog .                              (rule 0)

	%eof           accept


State 5

	ListDef -> Def .                                    (rule 8)
	ListDef -> Def . ';' ListDef                        (rule 9)

	'('            reduce using rule 8
	';'            shift, and enter state 27
	'E'            reduce using rule 8
	'N'            reduce using rule 8
	'S'            reduce using rule 8
	'W'            reduce using rule 8
	'false'        reduce using rule 8
	'not'          reduce using rule 8
	'true'         reduce using rule 8
	L_integ        reduce using rule 8
	%eof           reduce using rule 8


State 6

	Prog -> ListDef .                                   (rule 3)
	Prog -> ListDef . Expr                              (rule 4)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'not'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26
	%eof           reduce using rule 3

	Integer        goto state 9
	Expr6          goto state 10
	Expr5          goto state 11
	Expr2          goto state 12
	Expr1          goto state 13
	Expr           goto state 14
	Expr3          goto state 15
	Expr4          goto state 16
	Hand           goto state 17

State 7

	Def -> ShapeDef .                                   (rule 5)

	'('            reduce using rule 5
	';'            reduce using rule 5
	'E'            reduce using rule 5
	'N'            reduce using rule 5
	'S'            reduce using rule 5
	'W'            reduce using rule 5
	'false'        reduce using rule 5
	'not'          reduce using rule 5
	'true'         reduce using rule 5
	L_integ        reduce using rule 5
	%eof           reduce using rule 5


State 8

	Def -> EvalDef .                                    (rule 6)

	'('            reduce using rule 6
	';'            reduce using rule 6
	'E'            reduce using rule 6
	'N'            reduce using rule 6
	'S'            reduce using rule 6
	'W'            reduce using rule 6
	'false'        reduce using rule 6
	'not'          reduce using rule 6
	'true'         reduce using rule 6
	L_integ        reduce using rule 6
	%eof           reduce using rule 6


State 9

	Expr6 -> Integer .                                  (rule 34)

	'!='           reduce using rule 34
	')'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'and'          reduce using rule 34
	'or'           reduce using rule 34
	%eof           reduce using rule 34


State 10

	Expr5 -> Expr6 .                                    (rule 39)

	'!='           reduce using rule 39
	')'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'and'          reduce using rule 39
	'or'           reduce using rule 39
	%eof           reduce using rule 39


State 11

	Expr4 -> Expr5 .                                    (rule 47)

	'!='           reduce using rule 47
	')'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'and'          reduce using rule 47
	'or'           reduce using rule 47
	%eof           reduce using rule 47


State 12

	Expr2 -> Expr2 . RelOp Expr3                        (rule 40)
	Expr1 -> Expr2 . 'and' Expr1                        (rule 42)
	Expr1 -> Expr2 .                                    (rule 43)

	'!='           shift, and enter state 42
	')'            reduce using rule 43
	'<'            shift, and enter state 43
	'<='           shift, and enter state 44
	'=='           shift, and enter state 45
	'>'            shift, and enter state 46
	'>='           shift, and enter state 47
	'and'          shift, and enter state 48
	'or'           reduce using rule 43
	%eof           reduce using rule 43

	RelOp          goto state 41

State 13

	Expr -> Expr1 . 'or' Expr                           (rule 44)
	Expr -> Expr1 .                                     (rule 45)

	')'            reduce using rule 45
	'or'           shift, and enter state 40
	%eof           reduce using rule 45


State 14

	Prog -> ListDef Expr .                              (rule 4)

	%eof           reduce using rule 4


State 15

	Expr2 -> Expr3 .                                    (rule 41)

	'!='           reduce using rule 41
	')'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'and'          reduce using rule 41
	'or'           reduce using rule 41
	%eof           reduce using rule 41


State 16

	Expr3 -> Expr4 .                                    (rule 46)

	'!='           reduce using rule 46
	')'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'and'          reduce using rule 46
	'or'           reduce using rule 46
	%eof           reduce using rule 46


State 17

	Expr6 -> Hand . '.' Ident                           (rule 33)

	'.'            shift, and enter state 39


State 18

	Expr6 -> '(' . Expr ')'                             (rule 37)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'not'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26

	Integer        goto state 9
	Expr6          goto state 10
	Expr5          goto state 11
	Expr2          goto state 12
	Expr1          goto state 13
	Expr           goto state 38
	Expr3          goto state 15
	Expr4          goto state 16
	Hand           goto state 17

State 19

	Hand -> 'E' .                                       (rule 49)

	'.'            reduce using rule 49


State 20

	Hand -> 'N' .                                       (rule 48)

	'.'            reduce using rule 48


State 21

	Hand -> 'S' .                                       (rule 51)

	'.'            reduce using rule 51


State 22

	Hand -> 'W' .                                       (rule 50)

	'.'            reduce using rule 50


State 23

	Expr6 -> 'false' .                                  (rule 36)

	'!='           reduce using rule 36
	')'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'=='           reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'and'          reduce using rule 36
	'or'           reduce using rule 36
	%eof           reduce using rule 36


State 24

	Expr5 -> 'not' . Expr6                              (rule 38)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26

	Integer        goto state 9
	Expr6          goto state 37
	Hand           goto state 17

State 25

	Expr6 -> 'true' .                                   (rule 35)

	'!='           reduce using rule 35
	')'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'and'          reduce using rule 35
	'or'           reduce using rule 35
	%eof           reduce using rule 35


State 26

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	')'            reduce using rule 2
	','            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'and'          reduce using rule 2
	'or'           reduce using rule 2
	%eof           reduce using rule 2


State 27

	ListDef -> Def ';' . ListDef                        (rule 9)

	'('            reduce using rule 7
	'E'            reduce using rule 7
	'N'            reduce using rule 7
	'S'            reduce using rule 7
	'W'            reduce using rule 7
	'false'        reduce using rule 7
	'not'          reduce using rule 7
	'true'         reduce using rule 7
	L_Ident        shift, and enter state 2
	L_integ        reduce using rule 7
	%eof           reduce using rule 7

	Ident          goto state 3
	Def            goto state 5
	ListDef        goto state 36
	ShapeDef       goto state 7
	EvalDef        goto state 8

State 28

	ShapeDef -> Ident '=' . ListShape                   (rule 11)
	EvalDef -> Ident '=' . 'Evaluator' '(' ListEvalVal ')'    (rule 12)

	'!'            shift, and enter state 33
	'('            reduce using rule 21
	';'            reduce using rule 21
	'E'            reduce using rule 21
	'Evaluator'    shift, and enter state 34
	'N'            reduce using rule 21
	'S'            reduce using rule 21
	'W'            reduce using rule 21
	'['            shift, and enter state 35
	'false'        reduce using rule 21
	'not'          reduce using rule 21
	'true'         reduce using rule 21
	L_integ        reduce using rule 21
	%eof           reduce using rule 21

	Shape          goto state 29
	ShapeOk        goto state 30
	ShapeNeg       goto state 31
	ListShape      goto state 32

State 29

	ListShape -> Shape .                                (rule 22)
	ListShape -> Shape . '+' ListShape                  (rule 23)

	'('            reduce using rule 22
	'+'            shift, and enter state 61
	';'            reduce using rule 22
	'E'            reduce using rule 22
	'N'            reduce using rule 22
	'S'            reduce using rule 22
	'W'            reduce using rule 22
	'false'        reduce using rule 22
	'not'          reduce using rule 22
	'true'         reduce using rule 22
	L_integ        reduce using rule 22
	%eof           reduce using rule 22


State 30

	Shape -> ShapeOk .                                  (rule 17)

	'('            reduce using rule 17
	'+'            reduce using rule 17
	';'            reduce using rule 17
	'E'            reduce using rule 17
	'N'            reduce using rule 17
	'S'            reduce using rule 17
	'W'            reduce using rule 17
	'false'        reduce using rule 17
	'not'          reduce using rule 17
	'true'         reduce using rule 17
	L_integ        reduce using rule 17
	%eof           reduce using rule 17


State 31

	Shape -> ShapeNeg .                                 (rule 18)

	'('            reduce using rule 18
	'+'            reduce using rule 18
	';'            reduce using rule 18
	'E'            reduce using rule 18
	'N'            reduce using rule 18
	'S'            reduce using rule 18
	'W'            reduce using rule 18
	'false'        reduce using rule 18
	'not'          reduce using rule 18
	'true'         reduce using rule 18
	L_integ        reduce using rule 18
	%eof           reduce using rule 18


State 32

	ShapeDef -> Ident '=' ListShape .                   (rule 11)

	'('            reduce using rule 11
	';'            reduce using rule 11
	'E'            reduce using rule 11
	'N'            reduce using rule 11
	'S'            reduce using rule 11
	'W'            reduce using rule 11
	'false'        reduce using rule 11
	'not'          reduce using rule 11
	'true'         reduce using rule 11
	L_integ        reduce using rule 11
	%eof           reduce using rule 11


State 33

	ShapeNeg -> '!' . ShapeOk                           (rule 20)

	'['            shift, and enter state 35

	ShapeOk        goto state 60

State 34

	EvalDef -> Ident '=' 'Evaluator' . '(' ListEvalVal ')'    (rule 12)

	'('            shift, and enter state 59


State 35

	ShapeOk -> '[' . ListSuitCount ']'                  (rule 19)

	'('            shift, and enter state 58
	']'            reduce using rule 27
	L_integ        shift, and enter state 26

	Integer        goto state 54
	SuitCount      goto state 55
	SuitInt        goto state 56
	ListSuitCount  goto state 57

State 36

	ListDef -> Def ';' ListDef .                        (rule 9)

	'('            reduce using rule 9
	'E'            reduce using rule 9
	'N'            reduce using rule 9
	'S'            reduce using rule 9
	'W'            reduce using rule 9
	'false'        reduce using rule 9
	'not'          reduce using rule 9
	'true'         reduce using rule 9
	L_integ        reduce using rule 9
	%eof           reduce using rule 9


State 37

	Expr5 -> 'not' Expr6 .                              (rule 38)

	'!='           reduce using rule 38
	')'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'and'          reduce using rule 38
	'or'           reduce using rule 38
	%eof           reduce using rule 38


State 38

	Expr6 -> '(' Expr . ')'                             (rule 37)

	')'            shift, and enter state 53


State 39

	Expr6 -> Hand '.' . Ident                           (rule 33)

	L_Ident        shift, and enter state 2

	Ident          goto state 52

State 40

	Expr -> Expr1 'or' . Expr                           (rule 44)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'not'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26

	Integer        goto state 9
	Expr6          goto state 10
	Expr5          goto state 11
	Expr2          goto state 12
	Expr1          goto state 13
	Expr           goto state 51
	Expr3          goto state 15
	Expr4          goto state 16
	Hand           goto state 17

State 41

	Expr2 -> Expr2 RelOp . Expr3                        (rule 40)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'not'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26

	Integer        goto state 9
	Expr6          goto state 10
	Expr5          goto state 11
	Expr3          goto state 50
	Expr4          goto state 16
	Hand           goto state 17

State 42

	RelOp -> '!=' .                                     (rule 57)

	'('            reduce using rule 57
	'E'            reduce using rule 57
	'N'            reduce using rule 57
	'S'            reduce using rule 57
	'W'            reduce using rule 57
	'false'        reduce using rule 57
	'not'          reduce using rule 57
	'true'         reduce using rule 57
	L_integ        reduce using rule 57


State 43

	RelOp -> '<' .                                      (rule 52)

	'('            reduce using rule 52
	'E'            reduce using rule 52
	'N'            reduce using rule 52
	'S'            reduce using rule 52
	'W'            reduce using rule 52
	'false'        reduce using rule 52
	'not'          reduce using rule 52
	'true'         reduce using rule 52
	L_integ        reduce using rule 52


State 44

	RelOp -> '<=' .                                     (rule 53)

	'('            reduce using rule 53
	'E'            reduce using rule 53
	'N'            reduce using rule 53
	'S'            reduce using rule 53
	'W'            reduce using rule 53
	'false'        reduce using rule 53
	'not'          reduce using rule 53
	'true'         reduce using rule 53
	L_integ        reduce using rule 53


State 45

	RelOp -> '==' .                                     (rule 56)

	'('            reduce using rule 56
	'E'            reduce using rule 56
	'N'            reduce using rule 56
	'S'            reduce using rule 56
	'W'            reduce using rule 56
	'false'        reduce using rule 56
	'not'          reduce using rule 56
	'true'         reduce using rule 56
	L_integ        reduce using rule 56


State 46

	RelOp -> '>' .                                      (rule 54)

	'('            reduce using rule 54
	'E'            reduce using rule 54
	'N'            reduce using rule 54
	'S'            reduce using rule 54
	'W'            reduce using rule 54
	'false'        reduce using rule 54
	'not'          reduce using rule 54
	'true'         reduce using rule 54
	L_integ        reduce using rule 54


State 47

	RelOp -> '>=' .                                     (rule 55)

	'('            reduce using rule 55
	'E'            reduce using rule 55
	'N'            reduce using rule 55
	'S'            reduce using rule 55
	'W'            reduce using rule 55
	'false'        reduce using rule 55
	'not'          reduce using rule 55
	'true'         reduce using rule 55
	L_integ        reduce using rule 55


State 48

	Expr1 -> Expr2 'and' . Expr1                        (rule 42)

	'('            shift, and enter state 18
	'E'            shift, and enter state 19
	'N'            shift, and enter state 20
	'S'            shift, and enter state 21
	'W'            shift, and enter state 22
	'false'        shift, and enter state 23
	'not'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26

	Integer        goto state 9
	Expr6          goto state 10
	Expr5          goto state 11
	Expr2          goto state 12
	Expr1          goto state 49
	Expr3          goto state 15
	Expr4          goto state 16
	Hand           goto state 17

State 49

	Expr1 -> Expr2 'and' Expr1 .                        (rule 42)

	')'            reduce using rule 42
	'or'           reduce using rule 42
	%eof           reduce using rule 42


State 50

	Expr2 -> Expr2 RelOp Expr3 .                        (rule 40)

	'!='           reduce using rule 40
	')'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'and'          reduce using rule 40
	'or'           reduce using rule 40
	%eof           reduce using rule 40


State 51

	Expr -> Expr1 'or' Expr .                           (rule 44)

	')'            reduce using rule 44
	%eof           reduce using rule 44


State 52

	Expr6 -> Hand '.' Ident .                           (rule 33)

	'!='           reduce using rule 33
	')'            reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'and'          reduce using rule 33
	'or'           reduce using rule 33
	%eof           reduce using rule 33


State 53

	Expr6 -> '(' Expr ')' .                             (rule 37)

	'!='           reduce using rule 37
	')'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'and'          reduce using rule 37
	'or'           reduce using rule 37
	%eof           reduce using rule 37


State 54

	SuitInt -> Integer .                                (rule 26)

	')'            reduce using rule 26
	';'            reduce using rule 26
	']'            reduce using rule 26


State 55

	ListSuitCount -> SuitCount .                        (rule 28)
	ListSuitCount -> SuitCount . ';' ListSuitCount      (rule 29)

	';'            shift, and enter state 69
	']'            reduce using rule 28


State 56

	SuitCount -> SuitInt .                              (rule 24)

	';'            reduce using rule 24
	']'            reduce using rule 24


State 57

	ShapeOk -> '[' ListSuitCount . ']'                  (rule 19)

	']'            shift, and enter state 68


State 58

	SuitCount -> '(' . ListSuitInt ')'                  (rule 25)

	')'            reduce using rule 30
	L_integ        shift, and enter state 26

	Integer        goto state 54
	SuitInt        goto state 66
	ListSuitInt    goto state 67

State 59

	EvalDef -> Ident '=' 'Evaluator' '(' . ListEvalVal ')'    (rule 12)

	')'            reduce using rule 14
	L_integ        shift, and enter state 26

	Integer        goto state 63
	EvalVal        goto state 64
	ListEvalVal    goto state 65

State 60

	ShapeNeg -> '!' ShapeOk .                           (rule 20)

	'('            reduce using rule 20
	'+'            reduce using rule 20
	';'            reduce using rule 20
	'E'            reduce using rule 20
	'N'            reduce using rule 20
	'S'            reduce using rule 20
	'W'            reduce using rule 20
	'false'        reduce using rule 20
	'not'          reduce using rule 20
	'true'         reduce using rule 20
	L_integ        reduce using rule 20
	%eof           reduce using rule 20


State 61

	ListShape -> Shape '+' . ListShape                  (rule 23)
